<resources>
    <string name="iv_astraku">iv_astraku</string>
    <string name="login_greetings">Selamat datang kembali,</string>
    <string name="login_greetings_desc">Masukkan nomor HP mu yang sudah terdaftar di Astraku dan login menggunakan OTP yang kami kirim melalui SMS</string>
    <string name="login_phone_title">Nomor HP</string>
    <string name="loginphone_prefixindo">+62</string>
    <string name="loginphone_continue">Lanjut</string>
    <string name="iv_loginphone_dismiss">iv_loginphone_dismiss</string>
    <string name="btn_loginphone_submit">btn_loginphone_submit</string>
    <string name="cth_8123456789">cth : 8123456789</string>
    <string name="iv_notregistered_dismiss">iv_notregistered_dismiss</string>
    <string name="daftar">Daftar</string>
    <string name="nomor_ini_628132345455_belum_terdaftar_di_astraku_daftar_dulu_yuk">Nomor ini +628132345455 belum terdaftar di AstraKu. Daftar dulu yuk!</string>
    <string name="notregistered_title">Kamu sepertinya baru</string>
    <string name="ic_notregistered">ic_notregistered</string>
    <string name="all_offlinetitle">You are offline</string>
    <string name="all_offlinedesc">Please check your internet connection</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="verification_code">Kode Verifikasi</string>
    <string name="otp_code_please">AstraKu telah mengirim pesan teks dengan 6 digit kode verifikasi ke +62 . Silakan masukkan kode.</string>
    <string name="otp_title_field">One Time Password</string>
    <string name="otp_confirmation">Konfirmasi</string>
    <string name="otp_view">otp_view</string>
    <string name="_05_00">05:00</string>
    <string name="otp_error">Kode verifikasi yang kamu masukkan salah</string>
    <string name="btn_loginotp_submit">btn_loginotp_submit</string>
    <string name="merchant_greeting">Manage your voucher with \nAstraKu for Merchant</string>
    <string name="merchant_greeting_desc">Aplikasi ini digunakan untuk setiap merchant yang bekerja sama dengan astraku melakukan validasi voucher</string>
    <string name="scanbarcode_greeting">Scan QR Code dari customer</string>
    <string name="scanbarcode_greeting_desc">Scan QR untuk melakukan validasi terhadap voucher yang dimiliki customer</string>
    <string name="riwayat_voucher">Riwayat Voucher</string>
    <string name="lihat_semua"><u>Lihat Semua</u></string>
    <string name="discount">Diskon 35% Hingga Rp. 100.000 Pizza Hut, Sunter</string>
    <string name="voucher_place">Alfamart</string>
    <string name="history_notfound_title">Toko anda belum memiliki riwayat voucher</string>
    <string name="history_notfound_desc">Anda akan melihat riwayat yang telah diredeem oleh customer di toko Anda pada bagian ini</string>
    <string name="placeholder_text">-</string>
    <string name="cancel">Cancel</string>
    <string name="last_search">Last Search</string>
    <string name="delete_all">Delete All</string>
    <string name="hint_find_movie">Find the Movie</string>
    <string name="movies_list">Movies List</string>
    <string name="movies_description">Description</string>
    <string name="confirmation">Confirm</string>
    <string name="movie_not_found">Movies not found</string>
    <string name="no_favmovie_yet">You don\'t have Favourite Movies yet</string>
    <string name="try_again">Try Again</string>
    <string name="movies_notfound_desc">The movies you search currently not available. Please try again</string>
</resources>
